fix portfolio grid on mobile screen

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -47,3 +47,9 @@
     width: 100%;
     height: 100%;
 }
+
+@media (max-width: 760px){
+    #portfolio .polio-item .polio-img{
+        background-size: 100% 100%;
+    }
+}
